--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cocodemo",
   "scripts": {
     "postinstall": "lix download && haxe -cp src --run server.InstallLess",
-    "start": "haxe server.hxml && haxe forever.hxml node bin/server.js"
+    "start": "lix build server.hxml && lix build forever.hxml node bin/server.js"
   },
   "version": "0.0.42",
   "dependencies": {
